@@ -2585,3 +2585,10 @@ Thu Sep 30 22:36:37 PDT 1999
 
 added KDE Support config dialog
 
+
+-------------------------------------------------------------------------------
+
+Thu Sep 30 23:05:53 PDT 1999
+(Mandrake)
+
+updated TODO - removed two items, added one
